<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation"
    >

    <string name="app_name">吃货宝</string>
    <string name="home">外卖</string>
    <string name="action_search">搜索</string>
    <string name="open_drawer">抽屉打开了</string>
    <string name="close_drawer">抽屉关闭了</string>

    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>
    <string name="action_settings">Settings</string>


    <color name="line_color">#cccccc</color>
    <color name="edittext_line_color">#000000</color>
    <string name="title_activity_jump_to">JumpToActivity</string>

    <string name="tab_menu_waimai">外卖</string>
    <string name="tab_menu_find">发现</string>
    <string name="tab_menu_order">订单</string>
    <string name="tab_menu_setting">设置</string>


    <string name="reback">返回</string>
    <string name="start">启动</string>
    <string name="title_activity_zhuce">注册界面</string>
    <string name="text">新的activity</string>
    <string name="title_activity_main2">注  册</string>
    <string name="title_activity_test">test</string>
    <string name="login">登录</string>
    <string name="user">昵称:</string>
    <string name="passwd">密  码:</string>
    <string name="confim">确认密码:</string>
    <string name="phone">手机号码:</string>
    <string name="xieyi">我接受《用户使用协议》</string>
    <string name="reset">重  置</string>
    <string name="getmessage">获取验证码</string>
    <string name="confimMessage">验证码：</string>
    <string name="setting">系统设置</string>
    <string name="font">字体大小:</string>
    <string name="update">自动更新:</string>
    <string name="cache">清理缓存:</string>
    <string name="cache2">清理缓存</string>
    <string name="advice">意见反馈</string>
    <string name="about">关于吃货宝</string>
    <string name="restset">恢复默认设置</string>
    <string name="exit">退出登录</string>

    <string name="smssdk_receive_msg"><Data>&lt;font color=#209526>%s&lt;/font>秒</Data></string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>

    <string name="login_success">login success</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_unfinish">UnfinishActivity</string>
</resources>
