<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f5fffa"
    tools:context="com.edg.foodie.activity.SettingActivity">

    <RelativeLayout
        android:id="@+id/settitle"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_height="wrap_content"
            android:text="@string/reback"
            android:id="@+id/setbackbtn"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/setbackbtn"
            android:gravity="center"
            />
    </RelativeLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:id="@+id/font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settitle"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/font"
            android:textSize="20dp"
            />
        <Spinner
            android:layout_marginLeft="50dp"
            android:id="@+id/fontsize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/size"
            >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/font"
        >
        <TextView
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20dp"
            />
        <ToggleButton
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="#f5fffa"
            android:checked="true"
            android:textSize="20dp"
            android:textColor="#4F94CD"
            android:textOff="Off"
            android:textOn="On"
            />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="10dp"
        android:id="@+id/cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/update"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cache"
            android:textSize="20dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/cachesize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0.0MB"
            android:gravity="end"
            android:textSize="20dp"

            />
        <Button
            android:id="@+id/cleancache"
            android:layout_marginRight="10dp"
            android:background="#f5fffa"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清理"
            android:textSize="17dp"
            android:textColor="#4F94CD"
            />
    </LinearLayout>

    <View
        android:layout_below="@id/cache"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        />


    <RelativeLayout
        android:layout_marginTop="50dp"
        android:id="@+id/advice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cache">
        <Button
            android:id="@+id/advicebtn"
            android:background="#f5fffa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/advice"
            android:textColor="#4F94CD"
            android:textSize="20dp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/advice"
        android:layout_marginTop="20dp"
        >
        <Button
            android:id="@+id/aboutbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textSize="20dp"
            android:background="#f5fffa"
            android:textColor="#4F94CD"
            />

    </RelativeLayout>

    <View
        android:layout_below="@id/about"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        />

    <RelativeLayout
        android:id="@+id/restset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about"
        android:layout_marginTop="30dp"
        >
        <Button
            android:id="@+id/restsetbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/restset"
            android:background="#f5fffa"
            android:textSize="20dp"
            android:textColor="#4F94CD"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/restset"
        >
        <Button
            android:id="@+id/exitbtn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/exit"
            android:textSize="20dp"
            android:background="#f5fffa"
            android:textColor="#ff0000"
            />
    </RelativeLayout>
</RelativeLayout>
